<resources>
    <string name="app_name">FirebaseExampleApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">enter your email</string>
    <string name="prompt_password">enter password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_nickname">Nick Name</string>
</resources>